--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 [?] match loading, ending, cyling someone done stll getting there!
-[?] modules  modules (not still working on some bugs) <----
+[?] modules  modules (working on some bugs) <----
 [?] map, contributors, rules etc....
 [?] teams (TeamType, (Observing, or Participating)
 [?] objectives
