added InfoModule , Module Handling stuff like that some custom events
(note i need to fix parsing for Version Node)

--- a/TODO
+++ b/TODO
@@ -18,3 +18,4 @@
 [Maybe] stats 
 [?] TODO add generating a new map.xml file to make maps with!
 [?] todo ALL!
+TODO fix rules only doing the first rule and not the rest -_-
