little mistake of mine

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-[?] match loading, ending, cyling someone done stll getting there!
+[?] match loading, ending, cyling somewhat done stll getting there!
 [?] modules  modules (working on some bugs) <----
 [?] map, contributors, rules etc....
 [?] teams (TeamType, (Observing, or Participating)
