--- a/TODO
+++ b/TODO
@@ -19,3 +19,4 @@
 [?] wtm and ctw
 [?] todo make authors use UUIDS using an attribute instead of their name in a Node Tag
 [?] todo make contributors use uuids.
+Make scoreboards use title tag on rage and blitz
